update common and data-provider
fixes for aluminum

Issue-ID: CCSDK-3076
Signed-off-by: Michael DÜrre <michael.duerre@highstreet-technologies.com>
Change-Id: I5416e3328b067609a8820c8c0d4414d362c65ba2
Signed-off-by: Ravi Pendurty <ravi.pendurty@highstreet-technologies.com>